--- a/src/app/ama/ama.component.html
+++ b/src/app/ama/ama.component.html
@@ -1,55 +1,5 @@
 <div class="hero">
-  <nav class="border-gray-200 px-2 sm:px-4 py-2.5 rounded bg-transparent">
-    <div class="flex flex-wrap items-center justify-between mx-auto">
-      <a href="/" class="flex items-center">
-        <img src="assets/imgs/logo.png" class="logo" />
-      </a>
-      <button
-        data-collapse-toggle="navbar-default"
-        type="button"
-        class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-        aria-controls="navbar-default"
-        aria-expanded="false"
-      >
-        <span class="sr-only">Open main menu</span>
-        <svg
-          class="w-6 h-6"
-          aria-hidden="true"
-          fill="currentColor"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-            clip-rule="evenodd"
-          ></path>
-        </svg>
-      </button>
-      <div
-        class="hidden socials mx-auto md:mx-0 md:flex items-center justify-center w-100 flex-col md:flex-row"
-        id="navbar-default"
-      >
-        <div class="flex my-4 justify-center flex-row">
-          <a href="#">
-            <img src="assets/imgs/twitter.png" />
-          </a>
-          <a href="#">
-            <img src="assets/imgs/youtube.png" />
-          </a>
-          <a href="#">
-            <img src="assets/imgs/discord.png" />
-          </a>
-          <a href="#">
-            <img src="assets/imgs/telegram.png" />
-          </a>
-        </div>
-        <a href="#" class="playbtn mt-4 mx-auto">
-          <img src="assets/imgs/playbtn.png" class="mx-auto" />
-        </a>
-      </div>
-    </div>
-  </nav>
+  <app-navbar></app-navbar>
   <div class="container mx-auto pt-28">
     <div class="grid md:grid-cols-4 pb-32">
       <div class="col-span-1"></div>
