--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,13 @@
     </div>
 
     <div class="buttons space">
-      <a href="/ama" class="btn1 my-2"> <span>WHITE PAPER</span> </a>
+      <a href="#" class="btn1 my-2" disabled>
+        <span
+          >WHITE PAPER
+          <!-- <br /> -->
+        </span>
+        <small class="text-xs"> (COMING SOON) </small>
+      </a>
       <a class="btn2 my-2" href="/news">
         <span>CHECK UPDATES</span>
       </a>
