--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav
+<!-- <nav
   class="border-gray-200 px-2 sm:px-4 py-2.5 rounded bg-transparent w-screen"
 >
   <div class="flex flex-wrap items-center justify-between mx-auto">
@@ -26,28 +26,144 @@
           clip-rule="evenodd"
         ></path>
       </svg>
-    </button>
-    <div
-      class="hidden socials mx-auto md:mx-0 md:flex items-center justify-center w-100 flex-col md:flex-row"
+    </button> -->
+<!-- class="hidden socials mx-auto md:mx-0 md:flex items-center justify-center w-100 flex-col md:flex-row" -->
+<!-- <div
+      class="hidden socials mx-auto md:flex items-center justify-center w-full flex-col md:flex-row"
       id="navbar-default"
     >
-      <div class="flex my-4 justify-center flex-row">
-        <a href="#">
-          <img src="assets/imgs/twitter.png" />
-        </a>
-        <a href="#">
-          <img src="assets/imgs/youtube.png" />
-        </a>
-        <a href="#">
-          <img src="assets/imgs/discord.png" />
-        </a>
-        <a href="#">
-          <img src="assets/imgs/telegram.png" />
-        </a>
-      </div>
-      <a href="#" class="playbtn mt-4 mx-auto">
+      <ul class="flex flex-col p-4 mt-4 w-full">
+        <li>
+          <a href="#" class="block py-2 pl-3 pr-4">Home</a>
+        </li>
+        <li>
+          <div class="flex my-4 justify-center flex-row">
+            <a href="#">
+              <img src="assets/imgs/twitter.png" />
+            </a>
+            <a href="#">
+              <img src="assets/imgs/youtube.png" />
+            </a>
+            <a href="#">
+              <img src="assets/imgs/discord.png" />
+            </a>
+            <a href="#">
+              <img src="assets/imgs/telegram.png" />
+            </a>
+          </div>
+          <a href="#" class="playbtn mt-4 mx-auto">
+            <img src="assets/imgs/playbtn.png" class="mx-auto" />
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav> -->
+
+<nav class="px-2 sm:px-4 py-2.5 w-full z-20 top-0 left-0">
+  <div class="container flex flex-wrap items-center justify-between mx-auto">
+    <a href="https://flowbite.com/" class="flex items-center">
+      <img src="assets/imgs/logo.png" class="logo" />
+    </a>
+    <div
+      class="md:order-2 items-center hidden md:flex socials justify-center ml-auto lg:ml-0"
+    >
+      <a href="#" class="mx-1">
+        <img src="assets/imgs/twitter.png" />
+      </a>
+      <a href="#" class="mx-1">
+        <img src="assets/imgs/youtube.png" />
+      </a>
+      <a href="#" class="mx-1">
+        <img src="assets/imgs/discord.png" />
+      </a>
+      <a href="#" class="mx-1">
+        <img src="assets/imgs/telegram.png" />
+      </a>
+      <a href="#" class="playbtn mx-auto md:ml-3 pt-1">
         <img src="assets/imgs/playbtn.png" class="mx-auto" />
       </a>
+    </div>
+    <button
+      data-collapse-toggle="navbar-sticky"
+      type="button"
+      class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+      aria-controls="navbar-sticky"
+      aria-expanded="false"
+    >
+      <span class="sr-only">Open main menu</span>
+      <svg
+        class="w-6 h-6"
+        aria-hidden="true"
+        fill="currentColor"
+        viewBox="0 0 20 20"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+          clip-rule="evenodd"
+        ></path>
+      </svg>
+    </button>
+    <div
+      class="items-center ml-auto justify-between hidden w-full md:flex md:w-auto md:order-1"
+      id="navbar-sticky"
+    >
+      <ul
+        class="flex flex-col p-4 mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium"
+      >
+        <li>
+          <a href="/" class="block py-2 pl-3 pr-4" aria-current="page">Home</a>
+        </li>
+        <li>
+          <a href="#" class="block py-2 pl-3 pr-4">Aura</a>
+        </li>
+        <li class="relative text-center">
+          <a
+            id="dropdownNavbarLink"
+            data-dropdown-toggle="dropdownNavbar"
+            class="items-center justify-between py-2 font-medium rounded md:w-auto inline-block"
+          >
+            Community
+          </a>
+          <div id="dropdownNavbar" class="z-10 hidden">
+            <ul
+              class="py-2 px-6 bg-slate-800 mt-4 rounded text-left"
+              aria-labelledby="dropdownLargeButton"
+            >
+              <li>
+                <a href="#" class="block py-2">NEWS</a>
+              </li>
+              <li>
+                <a href="#" class="block py-2">UPDATES</a>
+              </li>
+              <li>
+                <a href="#" class="block py-2">EVENTS</a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div class="md:hidden flex flex-wrap my-3 justify-center socials">
+            <a href="#" class="mx-1">
+              <img src="assets/imgs/twitter.png" />
+            </a>
+            <a href="#" class="mx-1">
+              <img src="assets/imgs/youtube.png" />
+            </a>
+            <a href="#" class="mx-1">
+              <img src="assets/imgs/discord.png" />
+            </a>
+            <a href="#" class="mx-1">
+              <img src="assets/imgs/telegram.png" />
+            </a>
+            <a href="#" class="playbtn min-w-full mt-4 mx-auto md:ml-3">
+              <img src="assets/imgs/playbtn.png" class="mx-auto inline-block" />
+            </a>
+          </div>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
